containerd: Autospec creation for update from version 1.3.0 to version 1.3.3
Akihiro Suda (2):
      snapshots/native: ignore xattr errors during CopyDir
      apply: use naive applier when running in UserNS

Ameya Gawde (1):
      windows process shim installer

Davanum Srinivas (2):
      Bump to opencontainers/runc new version - v1.0.0-rc10
      Pick up fix for CVE-2019-16884 in opencontainers/selinux

Derek McGowan (11):
      Limit travis release script to a single build
      Update 1.3.1 release notes
      Fix cleanup error on content client test
      Add release notes for v1.3.2
      Fix flaky btrfs test
      Add Makefile variable to skip test packages
      Fix filter errors
      Update CRI vendor for 1.3
      Update yaml dependency
      Update mailmap
      Add release notes for v1.3.3

Eli Uriegas (1):
      build: Fix manpage generation

Erik Sipsma (1):
      runtime v2: Close platform in runc shim's Shutdown method.

Lantao Liu (7):
      Fix shim delete error code.
      Fix delete error code on the containerd daemon side.
      Use cached state instead of `runc state`.
      Avoid deadlock in unpacker.
      Add `--log-file` flag for windows service.
      Fix container pid.
      Update cri to b1bef15fbeb6c6f0569b67322acfa74ca3597755.

Michael Crosby (4):
      Bump runc to 1b8a1eeec3f337ab5d94f28980
      Add local-fs.target to service file
      Handle large output in v2 shim with TTY
      Move flag.Parse in tests to TestMain

Phil Estes (2):
      Catch up vndr with state of vendor/ dir
      Disable criu tests in Travis CI

Sebastiaan van Stijn (10):
      bump runc v1.0.0-rc9
      Update Golang 1.12.12 (CVE-2019-17596)
      [release/1.3] pin travis to go 1.12.12
      Revert "[release/1.3] pin travis to go 1.12.12"
      Update to Golang 1.12.13
      Prepare v1.3.1 release
      Update Golang 1.12.14
      Update Golang 1.12.15
      Update Golang 1.12.16 (CVE-2020-0601, CVE-2020-7919)
      [release/1.3] vendor: update golang.org/x

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.3.0.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.3.3.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
