--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.3.3.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.3.4.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
